WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133090
Take care of some ARM64 test failures
https://bugs.webkit.org/show_bug.cgi?id=133090
Summary
Take care of some ARM64 test failures
Filip Pizlo
Reported
2014-05-19 16:26:06 PDT
Patch forthcoming.
Attachments
the patch
(8.12 KB, patch)
2014-05-19 16:30 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-05-19 16:30:26 PDT
Created
attachment 231734
[details]
the patch
WebKit Commit Bot
Comment 2
2014-05-19 16:31:37 PDT
Attachment 231734
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/assembler/MacroAssemblerARM64.h:2411: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3
2014-05-19 16:32:11 PDT
(In reply to
comment #2
)
>
Attachment 231734
[details]
did not pass style-queue: > > > ERROR: Source/JavaScriptCore/assembler/MacroAssemblerARM64.h:2411: Place brace on its own line for function definitions. [whitespace/braces] [4] > Total errors found: 1 in 7 files > > > If any of these errors are false positives, please file a bug against check-webkit-style.
Fixed.
Maciej Stachowiak
Comment 4
2014-05-19 16:57:15 PDT
Comment on
attachment 231734
[details]
the patch Is there a form of blinding that doesn't use the scratch register? If not, then maybe it should be folded into shouldBlind. Otherwise the code seems to be saying that we should but won't.
Maciej Stachowiak
Comment 5
2014-05-19 16:57:36 PDT
Comment on
attachment 231734
[details]
the patch Is there a form of blinding that doesn't use the scratch register? If not, then maybe it should be folded into shouldBlind. Otherwise the code seems to be saying that we should but won't.
Filip Pizlo
Comment 6
2014-05-19 17:00:23 PDT
(In reply to
comment #5
)
> (From update of
attachment 231734
[details]
) > Is there a form of blinding that doesn't use the scratch register? If not, then maybe it should be folded into shouldBlind. Otherwise the code seems to be saying that we should but won't.
Most forms of blinding don't require the scratch register.
Geoffrey Garen
Comment 7
2014-05-19 17:25:22 PDT
Comment on
attachment 231734
[details]
the patch r=me
Filip Pizlo
Comment 8
2014-05-19 18:54:47 PDT
Landed in
http://trac.webkit.org/changeset/169092
Carlos Alberto Lopez Perez
Comment 9
2014-05-21 03:11:52 PDT
(In reply to
comment #8
)
> Landed in
http://trac.webkit.org/changeset/169092
This broke the script Tools/Scripts/run-jsc-stress-tests on Linux: "otool" is a Mac-only command Tracked here:
https://bugs.webkit.org/show_bug.cgi?id=133145
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug