Take care of some ARM64 test failures https://bugs.webkit.org/show_bug.cgi?id=133090

Reviewed by Geoffrey Garen.

PerformanceTests/SunSpider:

* profiler-test.yaml: Skip these on not-x86.

Source/JavaScriptCore:

Constant blinding on ARM64 cannot use the scratch register.

* assembler/MacroAssembler.h:
(JSC::MacroAssembler::convertInt32ToDouble):
(JSC::MacroAssembler::branchPtr):
(JSC::MacroAssembler::storePtr):
(JSC::MacroAssembler::store64):
* assembler/MacroAssemblerARM64.h:
(JSC::MacroAssemblerARM64::scratchRegisterForBlinding):

Tools:

* Scripts/run-jsc-stress-tests: Make it easier to conditionally skip things.



Canonical link: https://commits.webkit.org/151124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169092 268f45cc-cd09-0410-ab3c-d52691b4dbfc